In progress revising module E

--- a/modules/1-E/index.tex
+++ b/modules/1-E/index.tex
@@ -16,6 +16,7 @@
 \end{moduleStandards}
 
 \input{modules/1-E/readiness.tex}
+\input{modules/1-E/day0.tex}
 \input{modules/1-E/day1.tex}
 \input{modules/1-E/day2.tex}
 \input{modules/1-E/day3.tex}
