--- a/modules/1-E/day1.tex
+++ b/modules/1-E/day1.tex
@@ -3,180 +3,7 @@
 
 \begin{applicationActivities}{1}{3}
 
-\begin{definition}
-A \term{linear equation} is an equation of the variables \(x_i\) of the form
-\[
-a_1x_1+a_2x_2+\dots+a_nx_n=b
-.\]
-A \term{solution}
-for a linear equation is expressed in terms of the Euclidean vectors
-\[
-  \begin{bmatrix}
-    x_1 \\
-    x_2 \\
-    \vdots \\
-    x_n
-  \end{bmatrix}=
-  \begin{bmatrix}
-    s_1 \\
-    s_2 \\
-    \vdots \\
-    s_n
-  \end{bmatrix}
-\]
-and must satisfy
-\[
-a_1s_1+a_2s_2+\dots+a_ns_n=b
-.\]
-\end{definition}
 
-
-
-\begin{remark}
-In previous classes you likely assumed \(x=x_1\), \(y=x_2\), and \(z=x_3\).
-However, since this course often deals with equations of four or more
-variables, we will almost always write our variables as \(x_i\).
-\end{remark}
-
-\begin{definition}
-A \term{system of linear equations} (or a \term{linear system} for short)
-is a collection of one or more linear equations.
-  \begin{alignat*}{5}
-    a_{11}x_1 &\,+\,& a_{12}x_2 &\,+\,& \dots  &\,+\,& a_{1n}x_n &\,=\,& b_1 \\
-    a_{21}x_1 &\,+\,& a_{22}x_2 &\,+\,& \dots  &\,+\,& a_{2n}x_n &\,=\,& b_2 \\
-     \vdots&  &\vdots&   &&  &\vdots&&\vdots  \\
-    a_{m1}x_1 &\,+\,& a_{m2}x_2 &\,+\,& \dots  &\,+\,& a_{mn}x_n &\,=\,& b_m
-  \end{alignat*}
-A \term{solution}
-\[
-  \begin{bmatrix}
-    x_1 \\
-    x_2 \\
-    \vdots \\
-    x_n
-  \end{bmatrix}=
-  \begin{bmatrix}
-    s_1 \\
-    s_2 \\
-    \vdots \\
-    s_n
-  \end{bmatrix}
-\]
-for a linear system satisfies
-\[
-a_{i1}s_1+a_{i2}s_2+\dots+a_{in}s_n=b_i
-\]
-for \(1\leq i\leq m\) (that is, the solution satisfies all equations
-in the system).
-\end{definition}
-
-\begin{remark}
-  When variables in a large linear system are missing, we prefer to
-  write the system in one of the following standard forms:
-
-  \begin{multicols}{3}\noindent
-    Original linear system:
-    \begin{alignat*}{2}
-       x_1 + 3x_3 &\,=\,& 3 \\
-      3x_1 - 2x_2 + 4x_3 &\,=\,& 0 \\
-      -x_2 +  x_3 &\,=\,& -2
-    \end{alignat*}
-    Verbose standard form:
-    \begin{alignat*}{4}
-      1x_1 &\,+\,& 0x_2 &\,+\,& 3x_3 &\,=\,& 3 \\
-      3x_1 &\,-\,& 2x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
-      0x_1 &\,-\,& 1x_2 &\,+\,& 1x_3 &\,=\,& -2
-    \end{alignat*}
-    Concise standard form:
-    \begin{alignat*}{4}
-       x_1 &     &      &\,+\,& 3x_3 &\,=\,& 3 \\
-      3x_1 &\,-\,& 2x_2 &\,+\,& 4x_3 &\,=\,& 0 \\
-           &\,-\,&  x_2 &\,+\,&  x_3 &\,=\,& -2
-    \end{alignat*}
-  \end{multicols}
-\end{remark}
-
-\begin{definition}
-  A linear system is \term{consistent} if there exists a solution for the
-  system. Otherwise it is \term{inconsistent}.
-\end{definition}
-
-\begin{fact}
-  All linear systems are either \textbf{consistent with one solution},
-  \textbf{consistent with infinitely-many solutions}, or
-  \textbf{inconsistent}.
-\end{fact}
-
-\begin{activity}{10}
-  All inconsistent linear systems contain a logical \term{contradiction}.
-  Find a contradiction in this system.
-  \begin{align*}
-  -x_1+2x_2  &=  5 \\
-  2x_1-4x_2  &=  6
-  \end{align*}
-\end{activity}
-
-\begin{activity}{10}
-  Consider the following consistent linear system.
-  \begin{align*}
-  -x_1+2x_2  &= -3 \\
-  2x_1-4x_2  &=  6
-  \end{align*}
-\begin{subactivity}
-  Find three different solutions
-  for this system.
-\end{subactivity}
-\begin{subactivity}
-  Let \(x_2=a\) where \(a\) is an arbitrary real number, then find an
-  expression for \(x_1\) in terms of \(a\). Use this to write \textit{all}
-  solutions (the \term{solution set})
-  \(
-    \left\{
-	\begin{bmatrix}
-      ? \\
-      a
-    \end{bmatrix} \,\middle|\, a \in \IR 
-	\right\}
-  \)
-  for the linear system in terms of \(a\).
-\end{subactivity}
-\end{activity}
-
-% \begin{remark}
-%   The solution set of a consistent linear system with infinitely many solutions
-%   may be described by setting each
-%   certain variable equal to an arbitrary parameter, and expressing the
-%   other variables in terms of those parameters. (Later we will learn
-%   how to do this methodically.)
-% \end{remark}
-
-\begin{activity}{10}
-  Consider the following linear system.
-  \begin{alignat*}{5}
-    x_1 &\,+\,& 2x_2 &\, \,&     &\,-\,&  x_4 &\,=\,& 3 \\
-        &\, \,&      &\, \,& x_3 &\,+\,& 4x_4 &\,=\,& -2
-  \end{alignat*}
-  Describe the solution set
-  \[
-  	\left\{
-	\begin{bmatrix}
-      ? \\
-      a \\
-      ? \\
-      b
-	\end{bmatrix} \,\middle|\, a,b \in \IR \right\}
-  \] 
-  to the linear system
-  by setting \(x_2=a\) and \(x_4=b\), and then solving for \(x_1\) and
-  \(x_3\).
-\end{activity}
-
-\begin{observation}
-  Solving linear systems of two variables by graphing or substitution is
-  reasonable for two-variable systems, but these simple techniques
-  won't cut it for equations with
-  more than two variables or more than two equations.
-\end{observation}
 
 \begin{remark}
   The only important information in a linear system are its coefficients and
@@ -279,8 +106,144 @@ in the system).
     \end{enumerate}
   \end{multicols}
   \begin{TBLnote}
-    This activity could be ran as a card sort.
+    This activity could be ran as a card sort.  Allow 5 additional minutes for intra team discussion.
   \end{TBLnote}
 \end{activity}
+
+
+\begin{definition}
+  The following \term{row operations} produce equivalent
+  augmented matrices:
+  \begin{enumerate}
+    \item Swap two rows.
+    \item Multiply a row by a nonzero constant.
+    \item Add a constant multiple of one row to another row.
+  \end{enumerate}
+  Whenever two matrices \(A,B\) are equivalent (so whenever we do any of
+  these operations), we write \(A\sim B\).
+\end{definition}
+
+\begin{activity}{10}
+  Consider the following  linear systems.
+  \begin{multicols}{3}\noindent
+  \begin{enumerate}[(A)]
+    \item \(
+		\begin{alignedat}{4}
+   		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
+   		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
+   		  -x_1 &\,+\,& 3x_2 &\,-\,&  6x_3 &\,=\,& 11
+   		\end{alignedat} 
+	\)
+
+	\item \(
+		\begin{alignedat}{4}
+	   		x_1 &     &      &\,+\,& 9x_3 &\,=\,& 16 \\
+	       		&     & x_2 &\,+\,& x_3 &\,=\,& 9 \\
+	       		&     &      &\,-\,& 12x_3 &\,=\,& -24 
+		\end{alignedat}
+	\)   
+   
+   \item \(
+		\begin{alignedat}{4}
+    		x_1 &\,-\,& 3x_2 &\,+\,&  6x_3 &\,=\,& -11 \\
+		   2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
+		   3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 
+    	\end{alignedat}
+	\)
+
+
+   	\item \(
+		\begin{alignedat}{4}
+	   		x_1 &\,-\,& 3x_2 &\,+\,& 6x_3 &\,=\,& -11 \\
+	   		    &     & x_2 &\,+\,& x_3 &\,=\,& 9 \\
+	   		    &     & 7x_2 &\,-\,& 5x_3 &\,=\,& 39 \\
+		\end{alignedat}
+	\)
+
+   	\item \(
+		\begin{alignedat}{4}
+	   		x_1 &\,-\,& 3x_2 &\,+\,& 6x_3 &\,=\,& -11 \\
+	   		    &     & 4x_2 &\,-\,& 2x_3 &\,=\,& 24 \\
+	   		    &     & 7x_2 &\,-\,& 5x_3 &\,=\,& 39 \\
+		\end{alignedat}
+	\)
+
+ 	
+	
+	\item \(
+		\begin{alignedat}{4}
+	   		x_1 &     &      &\,+\,& 9x_3 &\,=\,& 16 \\
+	       		&     & x_2 &\,+\,& x_3 &\,=\,& 9 \\
+	       		&     &      &\,\,& x_3 &\,=\,& 2 
+		\end{alignedat}
+	\)
+	\end{enumerate}
+    \end{multicols}
+  \begin{subactivity}
+	Which system can be obtained from System (A) in the fewest number of row operations?
+  \end{subactivity}
+  \begin{subactivity}
+    Rank the six linear systems from easiest to solve to hardest to solve.
+  \end{subactivity}
+\end{activity}
+
+\begin{activity}{10}
+Consider the following augmented matrices.
+\begin{multicols}{3}
+\begin{enumerate}[(A)]
+\item \( \begin{bmatrix}[ccc|c] 3 & -2 & 13 & 6 \\ 2 & -2 & 10 & 2 \\ -1 & 3 & -6 & 11 \end{bmatrix} \)
+\item \( \begin{bmatrix}[ccc|c] 1 & 0 & 9 & 16 \\ 0 & 1 & 1 & 9 \\ 0 & 0 & -12 & -24 \end{bmatrix} \)
+\item \( \begin{bmatrix}[ccc|c] 1 & -3 & 6 & -11 \\ 2 & -2 & 10 & 2 \\ 3 & -2 & 13 & 6 \end{bmatrix} \)
+\item \( \begin{bmatrix}[ccc|c] 1 & -3 & 6 & -11 \\ 0 & 1 & 1 & 9 \\ 0 & 7 & -5 & 39 \end{bmatrix} \)
+\item \( \begin{bmatrix}[ccc|c] 1 & -3 & 6 & -11 \\ 0 & 4 & -2 & 24 \\ 0 & 7 & -5 & 39 \end{bmatrix} \)
+\item \( \begin{bmatrix}[ccc|c] 1 & 0 & 9 & 16 \\ 0 & 1 & 1 & 9 \\ 0 & 0 & 1 & 2 \end{bmatrix} \)
+\end{enumerate}
+\end{multicols}
+\begin{subactivity}
+Rank the six matrices from farthest from a reduced row echelon form (RREF) matrix to closest to a RREF matrix.
+\end{subactivity}
+\begin{subactivity}
+These matrices are all \term{row equivalent} and represent equivalent linear systems.
+Write down one of these linear systems and solve it.
+\end{subactivity}
+\end{activity}
+
+\begin{remark}
+It is important to understand the \term{Gauss-Jordan elimination} algorithm that converts a matrix into reduced row echelon form, but in practice we don't do thsi by hand; we use technology to do this for us.
+\end{remark}
+
+\begin{activity}{10}
+\begin{itemize}
+\item Go to {\tt http://www.cocalc.com} and create an account.
+\item Create a project titled ``Linear Algebra Team X'' with your appropriate team number.  Add all team members as collaborators.
+\item Open the project and click on ``New''
+\item Give it an appropriate name such as ``Class 4 workbook''.  Make a new Jupyter notebook.
+\item Click on ``Kernel'' and make sure ``Octave'' is selected.
+\item Type {\tt A=[1 3 4 ; 2 5 7]} to store the matrix $\begin{bmatrix} 1 & 3 & 4 \\ 2 & 5 & 7\end{bmatrix}$ in the variable $A$; hold shift when you press enter.
+\item Type {\tt rref(A)} to compute the reduced row echelon form of $A$.
+\end{itemize}
+\end{activity}
+
+\begin{remark}
+If you need to find the reduced row echelon form of a matrix during class, you should feel free to use CoCalc/Octave.
+\ \\
+
+You can change a cell from ``Code'' to ``Markdown'' or ``Raw'' to put comments around your calculations such as Activity numbers.
+\end{remark}
+
+\begin{activity}{5}
+Consider our system of equations from above.
+ \[
+		\begin{alignedat}{4}
+   		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
+   		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
+   		  -x_1 &\,+\,& 3x_2 &\,-\,&  6x_3 &\,=\,& 11
+   		\end{alignedat} 
+\]
+
+Convert this to an augmented matrix, use CoCalc to compute the reduced row echelon form, and convert back to a simpler system of equations to solve this system.  Write your solution on your whiteboard.
+\end{activity}
+
+
 
 \end{applicationActivities}
