Finish revising module E

--- a/modules/1-E/day1.tex
+++ b/modules/1-E/day1.tex
@@ -231,13 +231,26 @@ If you need to find the reduced row echelon form of a matrix during class, you s
 You can change a cell from ``Code'' to ``Markdown'' or ``Raw'' to put comments around your calculations such as Activity numbers.
 \end{remark}
 
-\begin{activity}{5}
+\begin{activity}{8}
 Consider our system of equations from above.
  \[
 		\begin{alignedat}{4}
    		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
    		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
    		  -x_1 &\,+\,& 3x_2 &\,-\,&  6x_3 &\,=\,& 11
+   		\end{alignedat} 
+\]
+
+Convert this to an augmented matrix, use CoCalc to compute the reduced row echelon form, and convert back to a simpler system of equations to solve this system.  Write your solution on your whiteboard.
+\end{activity}
+
+\begin{activity}{7}
+Consider our system of equations from above.
+ \[
+		\begin{alignedat}{4}
+   		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
+   		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
+   		  -x_1 &\,\,&  &\,-\,&  3x_3 &\,=\,&1
    		\end{alignedat} 
 \]
 
