--- a/tex/course-slides.tex
+++ b/tex/course-slides.tex
@@ -8,12 +8,13 @@
 \titlepage
 \end{frame}
 
-\input{..modules/1-E/index.tex} % 3 days
-\input{..modules/2-V/index.tex} % 4 days
-\input{..modules/3-S/index.tex} % 3 days
-\input{..modules/4-A/index.tex} % 3 days
-\input{..modules/5-M/index.tex} % 4 days
-\input{..modules/6-G/index.tex} % 4 days
+\input{modules/0-I/index.tex}
+\input{modules/1-E/index.tex}
+\input{modules/2-V/index.tex}
+\input{modules/3-S/index.tex}
+\input{modules/4-A/index.tex}
+\input{modules/5-M/index.tex}
+\input{modules/6-G/index.tex}
 
 
 
