--- a/tex/modules/4-A/sections/1.tex
+++ b/tex/modules/4-A/sections/1.tex
@@ -43,7 +43,7 @@ $W$ is called the \term{co-domain} of $T$.
 \begin{example}
 Let $T : \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x-z \\ y \end{bmatrix}$$
 
-\pause To show that \(T\) is linear, we must verify...
+To show that \(T\) is linear, we must verify...
 \[
   T\left(
     \begin{bmatrix} x_1 \\ y_1 \\ z_1 \end{bmatrix} +
@@ -66,7 +66,6 @@ Let $T : \IR^3 \rightarrow \IR^2$ be given by $$T\left(\begin{bmatrix} x \\ y \\
   \begin{bmatrix} x_2-z_2 \\ y_2 \end{bmatrix}=
   \begin{bmatrix} (x_1+x_2)-(z_1+z_2) \\ (y_1+y_2) \end{bmatrix}
 \]
-\pause
 And also...
 \[
   T\left(c\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right)
