no need for manual dating in applicationActivities

--- a/tex/course-slides.sty
+++ b/tex/course-slides.sty
@@ -78,7 +78,7 @@
 \NewEnviron{readinessAssuranceTestChoices}{}
 
 
-\NewEnviron{applicationActivities}[2]{
+\NewEnviron{applicationActivities}{
   \stepcounter{SectionCounter}
   \setcounter{ActivityCounter}{0}
   \subsection{Section \moduleLetter{}.\theSectionCounter}
