--- a/tex/modules/1-E/sections/1.tex
+++ b/tex/modules/1-E/sections/1.tex
@@ -1,7 +1,7 @@
 %!TEX root =../../course-notes.tex
 % ^ leave for LaTeXTools build functionality
 
-\begin{applicationActivities}{0}{2}
+\begin{applicationActivities}
 
 \begin{definition}
 A \term{linear equation} is an equation of the variables \(x_i\) of the form
@@ -135,7 +135,7 @@ in the system).
 	\begin{bmatrix}
       ? \\
       a
-    \end{bmatrix} \,\middle|\, a \in \IR 
+    \end{bmatrix} \,\middle|\, a \in \IR
 	\right\}
   \)
   for the linear system in terms of \(a\).
@@ -165,7 +165,7 @@ in the system).
       ? \\
       b
 	\end{bmatrix} \,\middle|\, a,b \in \IR \right\}
-  \] 
+  \]
   to the linear system
   by setting \(x_2=a\) and \(x_4=b\), and then solving for \(x_1\) and
   \(x_3\).
