--- a/tex/modules/1-E/sections/2.tex
+++ b/tex/modules/1-E/sections/2.tex
@@ -1,7 +1,7 @@
 
 
 
-\begin{applicationActivities}{1}{3}
+\begin{applicationActivities}
 
 
 
@@ -132,22 +132,22 @@
    		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
    		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
    		  -x_1 &\,+\,& 3x_2 &\,-\,&  6x_3 &\,=\,& 11
-   		\end{alignedat} 
+   		\end{alignedat}
 	\)
 
 	\item \(
 		\begin{alignedat}{4}
 	   		x_1 &     &      &\,+\,& 9x_3 &\,=\,& 16 \\
 	       		&     & x_2 &\,+\,& x_3 &\,=\,& 9 \\
-	       		&     &      &\,-\,& 12x_3 &\,=\,& -24 
+	       		&     &      &\,-\,& 12x_3 &\,=\,& -24
 		\end{alignedat}
-	\)   
-   
+	\)
+
    \item \(
 		\begin{alignedat}{4}
     		x_1 &\,-\,& 3x_2 &\,+\,&  6x_3 &\,=\,& -11 \\
 		   2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
-		   3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 
+		   3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6
     	\end{alignedat}
 	\)
 
@@ -168,13 +168,13 @@
 		\end{alignedat}
 	\)
 
- 	
-	
+
+
 	\item \(
 		\begin{alignedat}{4}
 	   		x_1 &     &      &\,+\,& 9x_3 &\,=\,& 16 \\
 	       		&     & x_2 &\,+\,& x_3 &\,=\,& 9 \\
-	       		&     &      &\,\,& x_3 &\,=\,& 2 
+	       		&     &      &\,\,& x_3 &\,=\,& 2
 		\end{alignedat}
 	\)
 	\end{enumerate}
@@ -238,7 +238,7 @@ Consider our system of equations from above.
    		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
    		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
    		  -x_1 &\,+\,& 3x_2 &\,-\,&  6x_3 &\,=\,& 11
-   		\end{alignedat} 
+   		\end{alignedat}
 \]
 
 Convert this to an augmented matrix, use CoCalc to compute the reduced row echelon form, and convert back to a simpler system of equations to solve this system.  Write your solution on your whiteboard.
@@ -251,7 +251,7 @@ Consider our system of equations from above.
    		  3x_1 &\,-\,& 2x_2 &\,+\,& 13x_3 &\,=\,& 6 \\
    		  2x_1 &\,-\,& 2x_2 &\,+\,& 10x_3 &\,=\,& 2 \\
    		  -x_1 &\,\,&  &\,-\,&  3x_3 &\,=\,&1
-   		\end{alignedat} 
+   		\end{alignedat}
 \]
 
 Convert this to an augmented matrix, use CoCalc to compute the reduced row echelon form, and convert back to a simpler system of equations to solve this system.  Write your solution on your whiteboard.
