--- a/tex/modules/2-V/sections/2.tex
+++ b/tex/modules/2-V/sections/2.tex
@@ -1,7 +1,7 @@
 
 
 
-\begin{applicationActivities}{2}{8}
+\begin{applicationActivities}
 
 \begin{remark}
   The following sets are examples of vector spaces, with the usual/natural
