--- a/tex/modules/2-V/sections/4.tex
+++ b/tex/modules/2-V/sections/4.tex
@@ -1,7 +1,7 @@
 
 
 
-\begin{applicationActivities}{4}{10}
+\begin{applicationActivities}
 
 \begin{fact}
   At least \(n\) vectors are required to span \(\IR^n\).
