--- a/tex/modules/3-S/sections/1.tex
+++ b/tex/modules/3-S/sections/1.tex
@@ -1,7 +1,7 @@
 
 
 
-\begin{applicationActivities}{1}{12}
+\begin{applicationActivities}
 
 \begin{activity}{15}
   In the previous module, we considered
