--- a/tex/modules/3-S/sections/2.tex
+++ b/tex/modules/3-S/sections/2.tex
@@ -1,7 +1,7 @@
 
 
 
-\begin{applicationActivities}{2}{13}
+\begin{applicationActivities}
 
 \begin{activity}{10}
   Last time we saw that \(\left\{
@@ -30,7 +30,7 @@
     \begin{bmatrix}0\\0\\1\\0\end{bmatrix},
     \begin{bmatrix}0\\0\\0\\1\end{bmatrix}
     \right\}
-    \)   & 
+    \)   &
 
   \(\left\{
     \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
@@ -38,7 +38,7 @@
     \begin{bmatrix}4\\3\\0\\2\end{bmatrix},
     \begin{bmatrix}-3\\0\\1\\3\end{bmatrix}
     \right\}
-    \)  \\ 
+    \)  \\
 
 
     \(\left\{
