--- a/tex/modules/3-S/sections/3.tex
+++ b/tex/modules/3-S/sections/3.tex
@@ -1,7 +1,7 @@
 
 
 
-\begin{applicationActivities}{3}{14}
+\begin{applicationActivities}
 
 \begin{fact}
   To compute a basis for the subspace \(\vspan\{\vect v_1,\dots,\vect v_m\}\),
@@ -44,7 +44,7 @@
     \begin{bmatrix}0\\0\\1\\0\end{bmatrix},
     \begin{bmatrix}0\\0\\0\\1\end{bmatrix}
     \right\}
-    \) & 
+    \) &
 
      \(\vspan\left\{
     \begin{bmatrix}2\\3\\0\\-1\end{bmatrix},
@@ -52,7 +52,7 @@
     \begin{bmatrix}4\\3\\0\\2\end{bmatrix},
     \begin{bmatrix}-3\\0\\1\\3\end{bmatrix}
     \right\}
-    \) \\ 
+    \) \\
 
  & \\
      \(\vspan\left\{
