--- a/tex/modules/4-A/sections/1.tex
+++ b/tex/modules/4-A/sections/1.tex
@@ -1,7 +1,7 @@
 
 
 
-\begin{applicationActivities}{1}{17}
+\begin{applicationActivities}
 
 \begin{definition}
 A \term{linear transformation} is a map between vector spaces that preserves the vector space operations.  More precisely, if $V$ and $W$ are vector spaces, a map $T:V\rightarrow W$ is called a linear transformation if
