--- a/tex/modules/4-A/sections/3.tex
+++ b/tex/modules/4-A/sections/3.tex
@@ -1,7 +1,4 @@
-
-
-
-\begin{applicationActivities}{3}{19}
+\begin{applicationActivities}
 
 \begin{observation}
 Let $T: V \rightarrow W$.  We have previously defined the following
