--- a/tex/modules/5-M/sections/1.tex
+++ b/tex/modules/5-M/sections/1.tex
@@ -1,7 +1,4 @@
-
-
-
-\begin{applicationActivities}{1}{21}
+\begin{applicationActivities}
 
 \begin{activity}{5}
 Let $T: \IR^3 \rightarrow \IR^2$ be given by the standard matrix $B=\begin{bmatrix} 2 & 1 & -3 \\ 5 & -3 & 4 \end{bmatrix}$ and $S: \IR^2 \rightarrow \IR^4$ be given by the standard matrix $A=\begin{bmatrix} 1 & 2 \\ 0 & 1 \\ 3 & 5 \\ -1 & -2 \end{bmatrix}$.
