--- a/tex/modules/5-M/sections/2.tex
+++ b/tex/modules/5-M/sections/2.tex
@@ -1,7 +1,4 @@
-
-
-
-\begin{applicationActivities}{2}{22}
+\begin{applicationActivities}
 
 \begin{activity}{5}
 Let $A=\begin{bmatrix} 2 & 7 & -1 \\ 0 & 3 & 2 \\ 1 & 1 & -1 \end{bmatrix}$.  Find a $3 \times 3$ matrix $I$ such that $IA=A$, that is,
