--- a/tex/modules/5-M/sections/3.tex
+++ b/tex/modules/5-M/sections/3.tex
@@ -1,7 +1,4 @@
-
-
-
-\begin{applicationActivities}{3}{23}
+\begin{applicationActivities}
 
 \begin{definition}
   Let $T: \IR^n \rightarrow \IR^n$ be a linear map with standard matrix $A$.
