--- a/tex/modules/6-G/sections/1.tex
+++ b/tex/modules/6-G/sections/1.tex
@@ -1,7 +1,4 @@
-
-
-
-\begin{applicationActivities}{1}{25}
+\begin{applicationActivities}
 
 \begin{activity}{5}
 The image below illustrates how the linear transformation
@@ -393,10 +390,10 @@ Swapping columns can be obtained from a sequence of adding column multiples.
 \\ &=
   -\det([\vec{w}\hspace{1em}\vec{v}])
   \end{align*}
-  
+
 So swapping two columns results in a negation of the
 determinant.  Therefore, determinants represent a \textit{signed} area, since they are not always
-positive. 
+positive.
 \end{observation}
 
 
