--- a/tex/modules/6-G/sections/3.tex
+++ b/tex/modules/6-G/sections/3.tex
@@ -1,7 +1,4 @@
-
-
-
-\begin{applicationActivities}{3}{27}
+\begin{applicationActivities}
 
 \begin{activity}{5}
   An invertible matrix \(M\) and its inverse \(M^{-1}\) are given below:
@@ -120,7 +117,7 @@ Thus the characteristic polynomial of \(A\) is
 \end{definition}
 
 \begin{activity}{15}
-  Compute $\det(A-\lambda I)$ to find the characteristic polynomial of  
+  Compute $\det(A-\lambda I)$ to find the characteristic polynomial of
   $A=\begin{bmatrix} 6 & -2 & 1 \\ 17 & -5 & 5 \\ -4 & 2 & 1 \end{bmatrix}$.
 
 
