--- a/tex/modules/6-G/sections/4.tex
+++ b/tex/modules/6-G/sections/4.tex
@@ -1,7 +1,4 @@
-
-
-
-\begin{applicationActivities}{4}{28}
+\begin{applicationActivities}
 
 
 \begin{observation}
@@ -25,7 +22,7 @@ Let  $A=\begin{bmatrix}0 & -1 \\ 1 & 0 \end{bmatrix}$.
     Compute the eigenvalues of $A$.
   \end{subactivity}
   \begin{subactivity}
-     Sketch a picture of the transformation of the unit square. 
+     Sketch a picture of the transformation of the unit square.
      What about this picture reveals that \(A\) has no real eigenvectors?
    \end{subactivity}
 \end{activity}
@@ -85,7 +82,7 @@ Let  $A=\begin{bmatrix}0 & -1 \\ 1 & 0 \end{bmatrix}$.
 \end{activity}
 
 \begin{observation}
-In the first example, the (2 dimensional) plane spanned by $\begin{bmatrix} 1 \\ 0 \\ 1\end{bmatrix}$ and $\begin{bmatrix} 4 \\ -2 \\ 0 \end{bmatrix}$ was preserved.  In the second example, only the (one dimensional) line spanned by $\begin{bmatrix} 1 \\ 0 \\ 1\end{bmatrix}$ is preserved. 
+In the first example, the (2 dimensional) plane spanned by $\begin{bmatrix} 1 \\ 0 \\ 1\end{bmatrix}$ and $\begin{bmatrix} 4 \\ -2 \\ 0 \end{bmatrix}$ was preserved.  In the second example, only the (one dimensional) line spanned by $\begin{bmatrix} 1 \\ 0 \\ 1\end{bmatrix}$ is preserved.
 \end{observation}
 
 \begin{definition}
@@ -97,9 +94,9 @@ eigenspace.
 
 \begin{fact}
   As we've seen, the geometric multiplicity may be different than
-  its algebraic multiplicity, but it cannot exceed it.  
+  its algebraic multiplicity, but it cannot exceed it.
   \ \\
-  This fact is explored deeper and explained in Math 316, Linear Algebra II  
+  This fact is explored deeper and explained in Math 316, Linear Algebra II
   \end{fact}
 
 % \begin{activity}{5} How are the algebraic and geometric multiplicities related?
