--- a/tex/course-notes.sty
+++ b/tex/course-notes.sty
@@ -89,7 +89,7 @@
 }
 
 
-\NewEnviron{applicationActivities}[2]{
+\NewEnviron{applicationActivities}{
   \stepcounter{SectionCounter}
   \setcounter{ActivityCounter}{0}
 
