--- a/tex/modules/2-V/sections/1.tex
+++ b/tex/modules/2-V/sections/1.tex
@@ -1,7 +1,7 @@
 
 
 
-\begin{applicationActivities}{1}{7}
+\begin{applicationActivities}
 
 % have students capture 8 properties of R2 from list of 11
 % include ca=b, unique equidistant, nonzero orthogonal
