--- a/tex/modules/4-A/sections/2.tex
+++ b/tex/modules/4-A/sections/2.tex
@@ -1,7 +1,7 @@
 
 
 
-\begin{applicationActivities}{2}{18}
+\begin{applicationActivities}
 
 \begin{definition}
 Let $T: V \rightarrow W$ be a linear transformation.
