--- a/tex/modules/6-G/sections/2.tex
+++ b/tex/modules/6-G/sections/2.tex
@@ -1,7 +1,4 @@
-
-
-
-\begin{applicationActivities}{2}{26}
+\begin{applicationActivities}
 
 \begin{definition}
   The \term{transpose} of a matrix is given by rewriting its columns as
@@ -316,10 +313,10 @@ Geometrically, this is the fact that if the height is 1, the base $\times$ heigh
 }
 
   \begin{align*}
-\det \begin{bmatrix} 2 & 3 & 5 & 0 \\ 0 & 3 & 2 & 0 \\ 1 & 2 & 0 & 3 \\ -1 & -1 & 2 & 2 \end{bmatrix} &= 
+\det \begin{bmatrix} 2 & 3 & 5 & 0 \\ 0 & 3 & 2 & 0 \\ 1 & 2 & 0 & 3 \\ -1 & -1 & 2 & 2 \end{bmatrix} &=
 (-1) (0) \det \begin{bmatrix} \tikzmark{topA}{2} & 3 & 5 & 0 \\ \tikzmark{leftA}{0} & 3 & 2 & \tikzmark{rightA}{0} \\ 1 & 2 & 0 & 3 \\ \tikzmark{bottomA}{-1} & -1 & 2 & 2 \end{bmatrix}
 +(1)(3) \det \begin{bmatrix} 2 & \tikzmark{topB}{3} & 5 & 0 \\ \tikzmark{leftB}{0} & 3 & 2 & \tikzmark{rightB}{0} \\ 1 & 2 & 0 & 3 \\ -1 & \tikzmark{bottomB}{-1} & 2 & 2 \end{bmatrix} +  \\
-&\phantom{xx} (-1)(2) \det \begin{bmatrix} 2 & 3 & \tikzmark{topC}{5} & 0 \\ \tikzmark{leftC}{0} & 3 & 2 & \tikzmark{rightC}{0} \\ 1 & 2 & 0 & 3 \\ -1 & -1 & \tikzmark{bottomC}{2} & 2 \end{bmatrix} 
+&\phantom{xx} (-1)(2) \det \begin{bmatrix} 2 & 3 & \tikzmark{topC}{5} & 0 \\ \tikzmark{leftC}{0} & 3 & 2 & \tikzmark{rightC}{0} \\ 1 & 2 & 0 & 3 \\ -1 & -1 & \tikzmark{bottomC}{2} & 2 \end{bmatrix}
 + (1)(0) \det \begin{bmatrix} 2 & 3 & 5 & \tikzmark{topD}{0} \\ \tikzmark{leftD}{0} & 3 & 2 & \tikzmark{rightD}{0} \\ 1 & 2 & 0 & 3 \\ -1 & -1 & 2 & \tikzmark{bottomD}{2} \end{bmatrix}  \\
 &= 3 \det \begin{bmatrix}2 & 5 & 0 \\ 1 & 0 & 3 \\ -1 & 2 & 2 \end{bmatrix} +(-1)(2) \det \begin{bmatrix} 2 & 3 & 0 \\ 1 & 2 & 3 \\ -1 & -1 & 2 \end{bmatrix}
 \end{align*}
