TBLnote->instructorNote. Suppress these in handouts.

--- a/tex/course-notes.sty
+++ b/tex/course-notes.sty
@@ -175,7 +175,7 @@
 }
 
 %This is for making instructor notes about running the activity (e.g. card sort, gallery walk...)
-\NewEnviron{TBLnote}{
+\NewEnviron{instructorNote}{
   \textcolor{blue}{
     \textbf{(Instructor Note:)}
     \BODY
