--- a/tex/modules/1-E/sections/2.tex
+++ b/tex/modules/1-E/sections/2.tex
@@ -105,9 +105,9 @@
       \item Replace a column with zeros.
     \end{enumerate}
   \end{multicols}
-  \begin{TBLnote}
+  \begin{instructorNote}
     This activity could be ran as a card sort.  Allow 5 additional minutes for intra team discussion.
-  \end{TBLnote}
+  \end{instructorNote}
 \end{activity}
 
 
