--- a/tex/modules/2-V/sections/4.tex
+++ b/tex/modules/2-V/sections/4.tex
@@ -116,11 +116,11 @@
     d\vect w\) that does not
     belong to this subset.
   % \end{subactivity}
-  \begin{TBLnote}
+  \begin{instructorNote}
     Use this linear combination to sketch a picture
     illustrating why this subset is not
     a subspace.
-  \end{TBLnote}
+  \end{instructorNote}
 \end{activity}
 
 \begin{fact}
