--- a/tex/modules/3-S/sections/1.tex
+++ b/tex/modules/3-S/sections/1.tex
@@ -16,9 +16,9 @@
   and showed that \(\vspan S\not=\IR^4\). Find two vectors from this set
   that are linear combinations of the other three vectors.
 
-  \begin{TBLnote}
+  \begin{instructorNote}
     Actually, the activity involved the corresponding vectors in \(\P^3\).
-  \end{TBLnote}
+  \end{instructorNote}
 \end{activity}
 
 \begin{definition}
