--- a/tex/modules/4-A/sections/3.tex
+++ b/tex/modules/4-A/sections/3.tex
@@ -59,9 +59,9 @@ Sort the following claims into two groups of equivalent statements.
 \item The system of linear equations given by the augmented matrix $\begin{bmatrix}[c|c] A & \vec{0} \end{bmatrix}$ has exactly one solution.
 \end{enumerate}
 \end{multicols}
-\begin{TBLnote}
+\begin{instructorNote}
   This activity may be ran as a card sort.
-\end{TBLnote}
+\end{instructorNote}
 
 
 \end{activity}
